colback/tests/ui/fail_no_option.stderr
error: Option<T> fields must use null='option'
 --> tests/ui/fail_no_option.rs:6:5
  |
6 |     row_c: Option<u16>,
  |     ^^^^^
